# cookiecutter-pypackage

./: .editorconfig  .gitignore  README.md  cookiecutter.json  makefile  mkdocs.yml  pyproject.toml
.github/workflows/: dev.yml
docs/: console_script_setup.md  faq.md  history.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py
